<resources>
    <string name="app_name">Simple Snake Game</string>
    <string name="score">score:\u0020</string>
    <string name="best">best:\u0020</string>
    <string name="up">up</string>
    <string name="down">down</string>
    <string name="right">right</string>
    <string name="left">left</string>
    <string name="play">New game</string>
    <string name="exit">Exit</string>
    <string name="info">Info</string>
    <string name="lose_title">You are crashed!</string>
    <string name="win_title">Congratulations, you\'ve completed the game!</string>
    <string name="your_score">Your score is\u0020</string>
    <string name="alert_ok">OK</string>
    <string name="get_out_title">Are you sure you want to get out?</string>
    <string name="get_out_description">Your progress will be lost.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="creator">\u00A9 Created by Kochenkov</string>
    <string name="share">share</string>
    <string name="share_link_text">Look at this game: https://play.google.com/store/apps/details?id=com.vkochenkov.snakegame</string>
    <string name="settings">Settings</string>
    <string name="speed_settings_str">Snake speed:</string>

</resources>