<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@drawable/main_gradient_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="40dp"
            android:text="@string/app_name"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play" />

            <Button
                android:id="@+id/btn_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings" />

            <Button
                android:id="@+id/btn_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share" />

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>